feat: complete product search pagination testing and security cleanup